--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			</div>
 			<div class="container">
 				<ol>
-					<li><a href="US Insurance Claims Project.html" target="_blank"> View report in browser</a></li>
+					<li><a href="US Insurance Claims Project (Petrosov Artem).html" target="_blank"> View report in browser</a></li>
 					<li><a href="US Insurance Claims Project (Petrosov Artem).ipynb" target="_blank">
   						Download file notebook.ipynb 
-					</a></li>
+					</a></li>Project
 					</a></li>
 					<li><a href="Claims and Weather Sample.csv" target="_blank">Download dataset</a></li>
 					</li>
