--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container content">
 			<h1 class="title"> US Insurance Claims Project</h1>
 			<p> Artem Petrosov, HCI </p>
-			<div class="container">
+			<div class="container">Project
 				<p> Dataset about claims from american drivers to insurance company </p>
 				<p> The task is to predict the response of the insurance company </p>
 			</div>
@@ -25,7 +25,7 @@
 					<li><a href="US Insurance Claims Project (Petrosov Artem).html" target="_blank"> View report in browser</a></li>
 					<li><a href="US Insurance Claims Project (Petrosov Artem).ipynb" target="_blank">
   						Download file notebook.ipynb 
-					</a></li>Project
+					</a></li>
 					</a></li>
 					<li><a href="Claims and Weather Sample.csv" target="_blank">Download dataset</a></li>
 					</li>
