--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container content">
 			<h1 class="title"> US Insurance Claims Project</h1>
 			<p> Artem Petrosov, HCI </p>
-			<div class="container">Project
+			<div class="container">
 				<p> Dataset about claims from american drivers to insurance company </p>
 				<p> The task is to predict the response of the insurance company </p>
 			</div>
